# Artical2AgentSpec

./: AGENTS.md  LICENSE  README.md  pyproject.toml
article2agentspec/: __init__.py  __main__.py  cli.py  exceptions.py  pipeline.py
article2agentspec/extraction/: __init__.py  base.py  heuristic.py  llm_optional.py
article2agentspec/parsing/: __init__.py  pdf.py
article2agentspec/validation/: __init__.py  validators.py
article2agentspec/writing/: __init__.py  package_writer.py
docs/: cli-mvp.md  fidelity-policy.md  output-spec.md  project-spec.md
schemas/: __init__.py
schemas/article2agentspec/: __init__.py  export_json_schema.py  models.py
schemas/article2agentspec/json_schema/: agent_spec.schema.json  eval_config.schema.json  manifest.schema.json  source_metadata.schema.json  tools.schema.json  workflow.schema.json
tests/: __init__.py  test_cli_mvp.py  test_models.py
